LightBDD
===========================================

Version 2.4.1
----------------------------------------
Summary:
+ #123 (LightBDD.XUnit3)(Change) Improved experience with running parameterized scenarios

Version 2.4.0
----------------------------------------
Summary:
+ #38 (all)(New) Added ability to specify verifiable parameters
+ #38 (all)(New) Added Expect.To.* expectation expressions
+ #59 (Core)(New) Added support for DI container
+ #59 (Framework)(New) Implemented default DI container
+ #59 (Autofac)(New) Added LightBDD.Autofac integration for Autofac DI container
+ #67 (Fixie)(New) Added LightBdd.Fixie2 integration project with https://github.com/fixie/fixie
+ #70 (all)(New) Added InlineTable<TRow>, VerifiableDataTable<TRow>, TableValidator<TRow> classes to represent tabular step method parameters and Table class to create them
+ #117 (XUnit2)(New) Added experimental ClassCollectionBehavior attribute allowing inter-class test parallelization
+ #120 (Framework)(Fix) StepExecution.Current.Comment() does not work after leaving sub-step in composite step

Version 2.3.6
----------------------------------------
Summary:
+ #108 (Core)(Change) Allowed IStepDecoratorAttribute and IScenarioDecoratorAttribute to be applied on class level

Version 2.3.5
----------------------------------------
Summary:
+ #104 LightBDD does not recognize xunit Category traits
Details:
+ #104 (XUnit2)(Change) Updated LightBDD.XUnit2 integration to recognize [Trait("Category", "...")] as scenario category

Version 2.3.4
----------------------------------------
Summary:
+ #34 Implemented console immediate progress notification for LightBDD.NUnit3
+ #34 Enhanced scenario progress notification
+ #98 Lifted requirement for parameterized constructors in LightBDD.XUnit2 FeatureFixture
Details:
+ #34 (NUnit3)(New) Implemented immediate progress notification when executed with `dotnet test` or `nunit3-console.exe`