@@ -73,6 +73,14 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Autofac", "src\Lig
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Autofac.UnitTests", "test\LightBDD.Autofac.UnitTests\LightBDD.Autofac.UnitTests.csproj", "{F130AD38-3852-43B1-840E-689E57D38790}"
 EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Extensions.DependencyInjection", "src\LightBDD.Extensions.DependencyInjection\LightBDD.Extensions.DependencyInjection.csproj", "{9BA3AECB-F606-4250-A1C3-D50E5AB53154}"
+EndProject
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Extensions.DependencyInjection.UnitTests", "test\LightBDD.Extensions.DependencyInjection.UnitTests\LightBDD.Extensions.DependencyInjection.UnitTests.csproj", "{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}"
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "DI", "DI", "{82B10F43-3A68-401C-99AB-515D409F6CD3}"
+EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Integrations", "Integrations", "{527D4497-4F9D-474C-93C7-773D6D48FCF3}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -506,11 +514,46 @@ Global
 		{F130AD38-3852-43B1-840E-689E57D38790}.Release|x64.Build.0 = Release|Any CPU
 		{F130AD38-3852-43B1-840E-689E57D38790}.Release|x86.ActiveCfg = Release|Any CPU
 		{F130AD38-3852-43B1-840E-689E57D38790}.Release|x86.Build.0 = Release|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|ARM.ActiveCfg = Debug|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|ARM.Build.0 = Debug|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|x64.ActiveCfg = Debug|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|x64.Build.0 = Debug|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|x86.Build.0 = Debug|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|Any CPU.Build.0 = Release|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|ARM.ActiveCfg = Release|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|ARM.Build.0 = Release|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|x64.ActiveCfg = Release|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|x64.Build.0 = Release|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|x86.ActiveCfg = Release|Any CPU
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|x86.Build.0 = Release|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Debug|ARM.ActiveCfg = Debug|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Debug|ARM.Build.0 = Debug|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Debug|x64.ActiveCfg = Debug|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Debug|x64.Build.0 = Debug|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Debug|x86.Build.0 = Debug|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|Any CPU.Build.0 = Release|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|ARM.ActiveCfg = Release|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|ARM.Build.0 = Release|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|x64.ActiveCfg = Release|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|x64.Build.0 = Release|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|x86.ActiveCfg = Release|Any CPU
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF}.Release|x86.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
 	EndGlobalSection
 	GlobalSection(NestedProjects) = preSolution
+		{CBD1B3D9-4B77-4B21-9C3A-7E3A9FB3D780} = {527D4497-4F9D-474C-93C7-773D6D48FCF3}
+		{EE206E44-4393-45E5-8C8F-331348128E09} = {527D4497-4F9D-474C-93C7-773D6D48FCF3}
+		{E270ECD0-B309-4CF5-AF1A-67A7A2F44C65} = {527D4497-4F9D-474C-93C7-773D6D48FCF3}
 		{08063D55-3F5E-4CA0-978E-00C6699A3011} = {A7491D1D-7E5B-4021-8105-4098683807EB}
 		{43976AB8-60F1-4E2B-855C-0425AC0D053A} = {A7491D1D-7E5B-4021-8105-4098683807EB}
 		{E8BDD57E-BAF1-49BB-AE45-21C79D87DC22} = {A7491D1D-7E5B-4021-8105-4098683807EB}
@@ -523,12 +566,17 @@ Global
 		{7B0B7668-FC01-417F-AB48-6B0C00976EB8} = {731BA391-CF84-4BA6-8A44-8B3B85D6F79E}
 		{89A86E84-BC70-4F54-8022-1FFCAF1D908D} = {A7491D1D-7E5B-4021-8105-4098683807EB}
 		{BBD59A28-DF7C-455A-BEDD-7EAE6D9CDC6D} = {A7491D1D-7E5B-4021-8105-4098683807EB}
+		{46143709-9004-4FB2-9179-9A7ED9BF2992} = {527D4497-4F9D-474C-93C7-773D6D48FCF3}
 		{13B7FE09-7153-4AC4-BF2A-8C63FBB3EF3C} = {A7491D1D-7E5B-4021-8105-4098683807EB}
 		{A160FFD6-0AF8-4B6B-9E96-45F06A08CFD2} = {731BA391-CF84-4BA6-8A44-8B3B85D6F79E}
 		{C78B34DF-5DC2-4EE7-91D0-4C474B49FBB1} = {731BA391-CF84-4BA6-8A44-8B3B85D6F79E}
+		{45E7A430-2F62-4C9A-9CDC-A4D1A2264123} = {527D4497-4F9D-474C-93C7-773D6D48FCF3}
 		{E747F4F0-60F4-413B-8C69-89184A4F2218} = {A7491D1D-7E5B-4021-8105-4098683807EB}
 		{2CC0F148-2994-412B-B730-81016E339702} = {731BA391-CF84-4BA6-8A44-8B3B85D6F79E}
+		{BA30A12E-C25B-47DF-9761-C3D752C59D3A} = {82B10F43-3A68-401C-99AB-515D409F6CD3}
 		{F130AD38-3852-43B1-840E-689E57D38790} = {A7491D1D-7E5B-4021-8105-4098683807EB}
+		{9BA3AECB-F606-4250-A1C3-D50E5AB53154} = {82B10F43-3A68-401C-99AB-515D409F6CD3}
+		{C1B0A7BC-AF9F-4039-8540-231ECDD30AAF} = {A7491D1D-7E5B-4021-8105-4098683807EB}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {0768D221-78A3-4008-968F-3A4D4E43A7D8}
